fix scrollbar overflow

--- a/src/main/client/ts/templates/GameController/GameController.module.scss
+++ b/src/main/client/ts/templates/GameController/GameController.module.scss
@@ -19,6 +19,7 @@
 
 .game-control-wrap {
 	display: flex;
+	height: 100%;
 	padding: 6% 2%;
 	background-color: var(--ghostboard-square-color);
 
